# cosmic-ext-applet-system-monitor

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  dev.DBrox.CosmicSystemMonitor.json  justfile  packaging.just
.github/workflows/: release.yml
docs/: Components.md  Layout.md  README.md  Sampling.md
i18n/cs/: cosmic_ext_applet_system_monitor.ftl
i18n/en/: cosmic_ext_applet_system_monitor.ftl
i18n/hu/: cosmic_ext_applet_system_monitor.ftl
i18n/pt-BR/: cosmic_ext_applet_system_monitor.ftl
i18n/sv/: cosmic_ext_applet_system_monitor.ftl
res/: dev.DBrox.CosmicSystemMonitor.desktop  dev.DBrox.CosmicSystemMonitor.json  dev.DBrox.CosmicSystemMonitor.metainfo.xml  generated-sources.json  install.sh  packaging.just
src/: CpuCoreHistogram.rs  app.rs  applet.rs  bar_chart.rs  chart.rs  color.rs  config.rs  cpu_widget.rs  helpers.rs  history.rs  localization.rs  main.rs  run_chart.rs  views.rs
src/components/: bar.rs  cpu_thermal_monitor.rs  gpu.rs  mod.rs  run.rs
src/sysmon/: bar_chart.rs  chart.rs  cpu_chart.rs  gpu.rs  mod.rs  monitor_item.rs  viewable.rs
src/sysmon/monitor_module/: mod.rs  net.rs  ram.rs  swap.rs
